--- a/Lapsisoitin.ini
+++ b/Lapsisoitin.ini
@@ -1,21 +1,25 @@
-[asetukset]
-; FlickFetchin hakemisto
-; FlickFetch="C:\Users\user\AppData\Local\FlickFetch\"
+Ôªø[asetukset]
 
-; K‰ynnist‰ Yle-Areena (1 = kyll‰, 0 = ei)
-AvaaAreena=1
-
-; Yle-Areena-sivu
-AreenaOsoite="http://areena.yle.fi/tv/oma"
-
-; K‰ynnist‰ TV7 (1 = kyll‰, 0 = ei)
-AvaaTV7=1
-
-; TV7-sivu
-TV7Osoite="http://www.tv7.fi/vod/category/1/"
-
-; VLC playerin hakemisto
+; FlickFetchin sijainti
+FlickFetch="c:\users\K√ÑYTT√ÑJ√Ñ\AppData\Local\FlickFetch\FlickFetch.exe"
+; VLC playerin sijainti
 VLC="C:\Program Files\VideoLAN\VLC\vlc.exe"
 
-; Menn‰‰nkˆ lopuksi unitilaan (1 = kyll‰, 0 = ei)
+; K√§ytet√§√§nk√∂ oletusselainta?
+OletusSelain=0
+
+; Oma selain-valinta
+Selain="C:\Program Files (x86)\Google\Chrome\Application\chrome.exe"
+
+; K√§ynnist√§ Yle-Areena (1 = kyll√§, 0 = ei)
+AvaaAreena=1
+; Yle-Areena-sivu
+AreenaOsoite=https://areena.yle.fi/tv/ohjelmat/lapset?t=uusimmat&l=fi
+
+; K√§ynnist√§ TV7 (1 = kyll√§, 0 = ei)
+AvaaTV7=1
+; TV7-sivu
+TV7Osoite="http://www.tv7.fi/vod/category/1/?filter=new"
+
+; Menn√§√§nk√∂ lopuksi unitilaan (1 = kyll√§, 0 = ei)
 Unille=1
