--- a/src/lapsisoitin.cfg
+++ b/src/lapsisoitin.cfg
@@ -14,6 +14,8 @@
         <add key="KeepOnTop" value="False" />
         <add key="ShowLinks" value="True" />
         <add key="DontShowDRMWarning" value="False" />
+        <add key="UseDescLimit" value="True" />
+        <add key="DescLimit" value="400" />
         <add key="Replace" value="" />
         <add key="SaveDesc" value="True" />
         <add key="ReplaceSpaces" value="False" />
@@ -33,6 +35,8 @@
         <add key="DatabaseFile" value="" />
         <add key="ColorProgramListNewEpisodesFound" value="Red" />
         <add key="StyleProgramListNewEpisodesFound" value="Normal" />
+        <add key="ColorProgramListDisabledEpisodes" value="#999999" />
+        <add key="StyleProgramListDisabledEpisodes" value="Normal" />
         <add key="ColorEpisodeListSelectedNotDownloaded" value="#417BBD" />
         <add key="StyleEpisodeListSelectedNotDownloaded" value="Normal" />
         <add key="ColorEpisodeListSelectedDownloaded" value="#9BB8D8" />
@@ -75,6 +79,7 @@
         <add key="DownloaderHidden" value="True" />
         <add key="LiveRecordMinimized" value="True" />
         <add key="Log" value="False" />
+        <add key="RestartOnFFmpegErrors" value="True" />
         <add key="Retries" value="5" />
         <add key="Timeout" value="45" />
         <add key="Icon32" value="True" />
@@ -95,23 +100,31 @@
         <add key="ProgramListRememberWindow" value="False" />
         <add key="ProgramListRememberSize" value="False" />
         <add key="ProgramListKeepOnTop" value="False" />
+        <add key="GetAreenaNames" value="True" />
         <add key="ProgramListFolder" value="" />
         <add key="ProgramListFile" value="" />
         <add key="ManualTimer" value="15" />
+        <add key="SkipKatsottavissaUlkomailla" value="False" />
         <add key="EpisodeListRememberWindow" value="False" />
         <add key="EpisodeListRememberSize" value="False" />
         <add key="EpisodeListKeepOnTop" value="True" />
         <add key="CheckUpdates" value="True" />
+        <add key="UpdateDownloaders" value="True" />
         <add key="CheckMissing" value="True" />
         <add key="CheckMissingDownloaders" value="True" />
         <add key="UseCustomVideoDate" value="False" />
         <add key="CustomVideoDate" value="" />
         <add key="UseCustomCurrentDate" value="False" />
         <add key="CustomCurrentDate" value="" />
+        <add key="HotkeyWarning" value="True" />
+        <add key="HotkeyCount" value="0" />
         <add key="AreenaDefaultName" value="%program% - %date% - Kausi %season% - Jakso %episode% - %title%" />
         <add key="AreenaCustomName" value="" />
         <add key="AreenaUseCustomName" value="False" />
         <add key="AreenaPadEpisode" value="False" />
+        <add key="AreenaFFmpegDefault" value="-y -i &quot;%link%&quot; -c copy &quot;%name%.mkv&quot;" />
+        <add key="AreenaFFmpegCustom" value="" />
+        <add key="AreenaFFmpegUseCustom" value="False" />
         <add key="AreenaHDSDumpDefault" value="--manifest &quot;%link%&quot; --outfile &quot;%name%.flv&quot; %quality% --useragent &quot;Mozilla/5.0 (Windows NT 6.1; WOW64; rv:33.0) Gecko/20100101 Firefox/33.0&quot;" />
         <add key="AreenaHDSDumpCustom" value="" />
         <add key="AreenaHDSDumpUseCustom" value="False" />
@@ -128,10 +141,23 @@
         <add key="AreenaQualityAtMost" value="False" />
         <add key="AreenaQualityNearest" value="False" />
         <add key="AreenaQuality" value="640" />
+        <add key="AreenaQualityResolutionCustom" value="9999" />
+        <add key="AreenaQualityBitrateCustom" value="9999" />
+        <add key="AreenaQualityBitrate1080" value="5000" />
+        <add key="AreenaQualityBitrate720" value="3000" />
+        <add key="AreenaQualityBitrate576" value="2000" />
+        <add key="AreenaQualityBitrate480" value="1000" />
+        <add key="AreenaQualityBitrate360" value="1000" />
+        <add key="AreenaQualityResolutionCustomChecked" value="False" />
+        <add key="AreenaQualityResolution1080Checked" value="True" />
+        <add key="AreenaQualityResolution720Checked" value="False" />
+        <add key="AreenaQualityResolution576Checked" value="False" />
+        <add key="AreenaQualityResolution480Checked" value="False" />
+        <add key="AreenaQualityResolution360Checked" value="False" />
         <add key="AreenaBatch" value="%download%&#xD;&#xA;ffmpeg -y -i &quot;%name%.flv&quot; -vcodec copy -acodec copy &quot;%name%.mkv&quot;&#xD;&#xA;del &quot;%name%.flv&quot;" />
         <add key="UseAreenaBatch" value="False" />
         <add key="AllSubtitles" value="False" />
-        <add key="Subtitles" value="True" />
+        <add key="Subtitles" value="False" />
         <add key="SubtitlesAddExtension" value="False" />
         <add key="Sub1" value=".fin" />
         <add key="Sub2" value=".fih" />
@@ -143,6 +169,8 @@
         <add key="Sub3Use" value="False" />
         <add key="Sub4Use" value="False" />
         <add key="Sub5Use" value="False" />
+        <add key="AreenaSubEncoding" value="-" />
+        <add key="SubtitlesReplaceDash" value="False" />
         <add key="AreenaTVLiveDefaultName" value="&lt;%schedulername% - &gt;%channel% - %currentdate%" />
         <add key="AreenaTVLiveCustomName" value="" />
         <add key="AreenaTVLiveUseCustomName" value="False" />
@@ -262,10 +290,10 @@
         <add key="UseKatsomoBatch" value="False" />
         <add key="WinXDownloader" value="10" />
         <add key="WinYDownloader" value="10" />
-        <add key="SimDownloads" value="5" />
-        <add key="ListSortOrder" value="Ascending" />
-        <add key="ListSortColumn" value="3" />
+        <add key="SimDownloads" value="6" />
         <add key="AddToQueue" value="True" />
         <add key="RunQueue" value="True" />
+        <add key="ListSortOrder" value="Ascending" />
+        <add key="ListSortColumn" value="2" />
     </appSettings>
 </configuration>
